IP Project Submission

--- a/views/cart/userCart.ejs
+++ b/views/cart/userCart.ejs
@@ -42,7 +42,7 @@
                 <li class="list-group-item"> <span class="fw-bold"> Total Amount</span> : &#x20B9 <span><%= totalAmount %> </span>  </li>
             </ul>
             <div class="my-3">
-            <form action="#">
+            <form action="/payment">
                     <button class="btn btn-success btn-small">Proceed To Pay</button>
             </form>
             </div>
