--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/star.css">
     <link rel="stylesheet" href="/css/app.css">
+       <script> 
+    let url='https://shopping-cart-payment-api-100.herokuapp.com/discount/1000'
+        console.log(url)
+        https.get(url,function(response)
+        {
+            response.on("data",function(data){
+            const weatherData = JSON.parse(data);
+            console.log(weatherData.discount);
+            discount=parseInt(weatherData.discount);
+            console.log(discount);
+            const input=document.getElementById("discount");
+            input.innerHTML=discount;
+             })
+        })
+             </script>
 </head>
 <body>
     
